<resources>
    <string name="app_name">ToDoPro</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title:</string>
    <string name="details">Details:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="enteraddress">Enter Address</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
